@@ -1,3 +1,31 @@
-Match Sweeper project
+# Match Sweeper
 
-- insert info here
+Match Sweeper is the final project for Programming Methodology I at Chulalongkorn University. It combines elements of Minesweeper and a matching game.
+
+## Table of Contents
+- [Installation](#installation)
+- [Usage](#usage)
+
+## Installation
+
+1. **Clone the Repository:**
+```bash
+git clone https://github.com/Lectrozzz/Match-Sweeper.git
+```
+
+2. **Install JavaFX:**
+Make sure you have JavaFX installed (The project was developed using JavaFX SDK 18).
+
+## Usage
+
+1. **Open Terminal:**
+Open a terminal window.
+
+2. **Navigate to the Match Sweeper Folder:**
+Change the directory to where the Match Sweeper project is located.
+
+3. **Run the Game:**
+Use the following command:
+```bash
+java -jar --module-path "Path to JavaFX lib" --add-modules javafx.controls,javafx.fxml,javafx.media MatchSweeper.jar
+```
